--- a/psdaq/psdaq/cnf/lab3-caf-cam.cnf
+++ b/psdaq/psdaq/cnf/lab3-caf-cam.cnf
@@ -3,7 +3,7 @@ hutch, user, password = ('tst', 'tstopr', 'pcds')
 
 epics_env = 'EPICS_PVA_ADDR_LIST=172.21.151.255'
 
-collect_host = 'drp-tst-dev002'
+collect_host = 'drp-tst-dev003'
 
 # procmgr FLAGS: <port number> static port number to keep executable
 #                              running across multiple start/stop commands.
@@ -27,5 +27,6 @@ procmgr_config = [
  # meb
  { host: 'drp-tst-dev009', id:'meb1', flags:'sxpu', cmd:'monReqServer -P '+hutch+' -d -q 4 -C '+collect_host},
  # drp
- { host: 'drp-tst-dev009', id:'cam_0', flags:'sxpu', cmd:'drp -o /ffb01/data -l 0xf -D fakecam -d /dev/datadev_1 -P '+hutch+' -C '+collect_host}
+ { host: 'drp-tst-dev009', id:'cam_0', flags:'sxpu', cmd:'drp -o /ffb01/data -l 0x1 -D fakecam -d /dev/datadev_1 -P '+hutch+' -C '+collect_host},
+ { host: 'drp-tst-dev009', id:'cam_1', flags:'sxpu', cmd:'drp -o /ffb01/data -l 0x2 -D fakecam -d /dev/datadev_1 -P '+hutch+' -C '+collect_host}
 ]
