--- a/psdaq/drp/CMakeLists.txt
+++ b/psdaq/drp/CMakeLists.txt
@@ -4,6 +4,7 @@ set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 
 add_library(drpbase
+    PythonConfigScanner.cc
     BEBDetector.cc
     XpmDetector.cc
     DrpBase.cc
