Support comma-delimited list of procmgrd users in /etc/procmgrd.conf.

--- a/psdaq/psdaq/procmgr/procmgrd.conf
+++ b/psdaq/psdaq/procmgr/procmgrd.conf
@@ -2,5 +2,6 @@
 PORTBASE=29000
 PROCMGRDBIN=/reg/common/package/procServ/2.6.0-SLAC/x86_64-rhel7-gcc48-opt/bin/procmgrd
 PROCSERVBIN=/reg/common/package/procServ/2.6.0-SLAC/x86_64-rhel6-gcc44-opt/bin/procServ
-PROCMGRDUSER=nobody
+# comma-delimited list of up to 8 procmgrd users
+PROCMGRDUSERS=nobody,nobody,nobody,nobody,nobody,nobody,nobody,nobody
 CONDABASE=/reg/g/psdm/sw/conda2/inst
