--- a/psdaq/psdaq/cnf/ami.cnf
+++ b/psdaq/psdaq/cnf/ami.cnf
@@ -3,8 +3,9 @@ if not platform: platform = '5'
 heartbeat_period = 1000 # units are ms
 
 ami_workers_per_node = 4
-ami_worker_nodes = ["drp-tst-acc%02d" % i for i in range(1, 5) if i != 2 and i != 3]
-ami_worker_nodes = ["drp-tst-dev016", "drp-tst-dev015"]
+#ami_worker_nodes = ["drp-tst-acc%02d" % i for i in range(1, 5) if i != 2 and i != 3]
+#ami_worker_nodes = ["drp-tst-dev016", "drp-tst-dev015"]
+ami_worker_nodes = ["drp-tst-acc01", "drp-tst-acc05"]
 ami_num_workers = len(ami_worker_nodes)
 ami_manager_node = "drp-tst-acc05"
 
