PvaDetector and EpicsArch updates

--- a/psdaq/epicsArch/CMakeLists.txt
+++ b/psdaq/epicsArch/CMakeLists.txt
@@ -1,6 +1,7 @@
 find_package(PythonLibs REQUIRED)
 
 add_executable(epicsArch
+    ../drp/PvMonitorBase.cc
     EpicsArchMonitor.cc
     EpicsMonitorPv.cc
     PvConfigFile.cc
