Expand BEBDetector to support multiple segments in a process.

--- a/psdaq/drp/CMakeLists.txt
+++ b/psdaq/drp/CMakeLists.txt
@@ -26,6 +26,7 @@ target_link_libraries(drpbase
 add_executable(drp
     AreaDetector.cc
     Digitizer.cc
+    EpixQuad.cc
     TimingSystem.cc
     TimeTool.cc
     Wave8.cc
